--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,11 @@ a {
 .email {
     margin-bottom: 70px;
 }
+.short-text {
+    margin-top: 16px;
+    margin-right: 20px;
+    font-size: 12px;
+}
 footer {
     border-top: 2px solid darkgrey;
 }
